= master

* Delay building rack app until Roda.app is called (jeremyevans)

* Add hash_routes plugin for O(1) route dispatching at any level in the routing tree (jeremyevans)

* Add support for per-cookie cipher secrets in the sessions plugin, and enable them by default (jeremyevans)

* Add match_hook plugin for calling hooks when there is a successful match block (adam12) (#164)

= 3.18.0 (2019-03-15)

* Add direct_call plugin for making Roda.call skip middleware, allowing more optimization when dispatching routes (jeremyevans)

* Improve performance of default_headers plugin by directly defining set_default_headers (jeremyevans)

* Improve performance when freezing app if certain methods have not been overridden (jeremyevans)

* Support :check_arity and :check_dynamic_arity app options for whether/how to check arity for blocks used to define methods (jeremyevans)

* Improve performance of the status_handler plugin by using methods instead of instance_exec (jeremyevans)

* Remove r.static_route method from the static_routing plugin (jeremyevans)

* Improve performance of the static_routing plugin by using methods instead of instance_exec (jeremyevans)

* Add support for the route_block_args plugin to the route_csrf plugin (jeremyevans)

* Improve performance of the route_csrf plugin by using a method instead of instance_exec (jeremyevans)

* Improve performance of the route_block_args plugin by using a method instead of instance_exec (jeremyevans)

* Improve performance of the path plugin by using methods instead of instance_exec (jeremyevans)

* Improve performance of the named_templates plugin by using methods instead of instance_exec (jeremyevans)

* Improve performance of the multi_route plugin by using methods instead of instance_exec (jeremyevans)

* Improve performance of the hooks plugin by using methods instead of instance_exec (jeremyevans)

* Improve performance of the mail_processor plugin by using methods instead of instance_exec (jeremyevans)
